--- a/index.html
+++ b/index.html
@@ -1,331 +1,68 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Compress your images online with our fully responsive image compression tool. Optimize images for web use with adjustable compression levels.">
-    <meta name="keywords" content="image compression, optimize images, image optimizer, compress images online">
-    <meta name="author" content="Your Name">
-    <title>Image Compression Tool</title>
+    <title>Payment Gateway</title>
     <style>
-        /* General Styles */
-        :root {
-            --primary-color: #6d28d9;
-            --primary-hover: #5b21b6;
-            --background-light: #f4f4f9;
-            --background-dark: #1e1e2f;
-            --text-light: #333;
-            --text-dark: #f4f4f9;
-            --card-bg-light: #fff;
-            --card-bg-dark: #2d2d44;
-            --border-light: #ddd;
-            --border-dark: #444;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: var(--background-light);
-            color: var(--text-light);
-            transition: background-color 0.3s, color 0.3s;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
-
-        body.dark-mode {
-            background-color: var(--background-dark);
-            color: var(--text-dark);
-        }
-
-        header {
-            background-color: var(--primary-color);
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            box-shadow: var(--shadow);
-        }
-
-        main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        h1, h2 {
-            margin: 0;
-        }
-
-        /* Dark Mode Toggle */
-        #dark-mode-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: var(--primary-color);
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            transition: background-color 0.3s;
-        }
-
-        #dark-mode-toggle:hover {
-            background-color: var(--primary-hover);
-        }
-
-        /* Image Compression Tool Section */
-        #compression-tool {
+        body {
+            background: linear-gradient(135deg, #ece9e6, #ffffff);
             display: flex;
-            flex-direction: column;
-            gap: 20px;
-            margin-top: 20px;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-
-        #upload-section, #result-section {
-            background-color: var(--card-bg-light);
-            border: 1px solid var(--border-light);
+        .container {
+            background: rgba(255, 255, 255, 0.3);
+            backdrop-filter: blur(10px);
             padding: 20px;
-            border-radius: 12px;
-            box-shadow: var(--shadow);
-            transition: background-color 0.3s, border-color 0.3s;
-        }
-
-        body.dark-mode #upload-section, body.dark-mode #result-section {
-            background-color: var(--card-bg-dark);
-            border-color: var(--border-dark);
-        }
-
-        #upload-section input[type="file"] {
-            display: none;
-        }
-
-        .upload-label {
-            display: block;
-            padding: 15px;
-            background-color: var(--primary-color);
-            color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            width: 350px;
             text-align: center;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
-
-        .upload-label:hover {
-            background-color: var(--primary-hover);
+        h2 {
+            margin-bottom: 15px;
+            color: #333;
         }
-
-        #compression-level {
+        input, button {
             width: 100%;
-            margin: 20px 0;
-        }
-
-        #compress-btn {
-            background-color: var(--primary-color);
-            color: #fff;
+            padding: 10px;
+            margin: 10px 0;
             border: none;
-            padding: 15px 20px;
-            width: 100%;
             border-radius: 8px;
-            cursor: pointer;
             font-size: 16px;
-            transition: background-color 0.3s;
         }
-
-        #compress-btn:hover {
-            background-color: var(--primary-hover);
+        input {
+            background: rgba(255, 255, 255, 0.5);
+            outline: none;
         }
-
-        #compress-btn:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
+        button {
+            background: #4A90E2;
+            color: white;
+            cursor: pointer;
+            transition: 0.3s;
         }
-
-        #result-section {
-            display: none;
-        }
-
-        #compressed-image {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-top: 20px;
-        }
-
-        #download-link {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
-            background-color: var(--primary-color);
-            color: #fff;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: background-color 0.3s;
-        }
-
-        #download-link:hover {
-            background-color: var(--primary-hover);
-        }
-
-        /* Loading Spinner */
-        .spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-top: 4px solid var(--primary-color);
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-            margin: 20px auto;
-            display: none;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Google AdSense Section */
-        #ad-section {
-            margin: 20px 0;
-            text-align: center;
-        }
-
-        /* Responsive Design */
-        @media (min-width: 768px) {
-            #compression-tool {
-                flex-direction: row;
-            }
-
-            #upload-section {
-                flex: 1;
-            }
-
-            #result-section {
-                flex: 1;
-            }
-        }
-
-        /* Footer */
-        footer {
-            background-color: var(--primary-color);
-            color: #fff;
-            text-align: center;
-            padding: 15px;
-            margin-top: 20px;
-            border-radius: 8px 8px 0 0;
-            box-shadow: var(--shadow);
+        button:hover {
+            background: #357ABD;
         }
     </style>
 </head>
 <body>
-    <!-- Dark Mode Toggle -->
-    <button id="dark-mode-toggle">Toggle Dark Mode</button>
 
-    <header>
-        <h1>Image Compression Tool</h1>
-    </header>
-    <main>
-        <!-- Google AdSense Section -->
-        <section id="ad-section">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_UNIT_ID"
-                    crossorigin="anonymous"></script>
-            <!-- Ad Unit -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-YOUR_AD_UNIT_ID"
-                 data-ad-slot="1234567890"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </section>
+    <div class="container">
+        <h2>bKash Payment</h2>
+        <input type="text" placeholder="Enter Amount" />
+        <input type="text" placeholder="bKash Number" />
+        <button>Proceed Payment</button>
+    </div>
 
-        <!-- Image Compression Tool -->
-        <section id="compression-tool">
-            <!-- Upload Section -->
-            <div id="upload-section">
-                <h2>Upload Your Image</h2>
-                <label for="image-input" class="upload-label">Choose Image</label>
-                <input type="file" id="image-input" accept="image/*">
-                <label for="compression-level">Compression Level: <span id="compression-value">50%</span></label>
-                <input type="range" id="compression-level" min="0" max="1" step="0.1" value="0.5">
-                <button id="compress-btn">Compress Image</button>
-                <div class="spinner" id="spinner"></div>
-            </div>
-
-            <!-- Result Section -->
-            <div id="result-section">
-                <h2>Compressed Image</h2>
-                <img id="compressed-image" src="" alt="Compressed Image">
-                <a id="download-link" href="#" download="compressed-image.jpg">Download Compressed Image</a>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 Image Compression Tool. All rights reserved.</p>
-    </footer>
-
-    <script>
-        // JavaScript for Image Compression
-        const imageInput = document.getElementById('image-input');
-        const compressionLevel = document.getElementById('compression-level');
-        const compressionValue = document.getElementById('compression-value');
-        const compressBtn = document.getElementById('compress-btn');
-        const resultSection = document.getElementById('result-section');
-        const compressedImage = document.getElementById('compressed-image');
-        const downloadLink = document.getElementById('download-link');
-        const spinner = document.getElementById('spinner');
-
-        // Update compression level value
-        compressionLevel.addEventListener('input', () => {
-            compressionValue.textContent = `${Math.round(compressionLevel.value * 100)}%`;
-        });
-
-        // Compress Image
-        compressBtn.addEventListener('click', function () {
-            const file = imageInput.files[0];
-            if (!file) {
-                alert('Please upload an image first.');
-                return;
-            }
-
-            // Show spinner and disable button
-            spinner.style.display = 'block';
-            compressBtn.disabled = true;
-
-            const reader = new FileReader();
-            reader.onload = function (event) {
-                const img = new Image();
-                img.src = event.target.result;
-
-                img.onload = function () {
-                    const canvas = document.createElement('canvas');
-                    const ctx = canvas.getContext('2d');
-                    canvas.width = img.width;
-                    canvas.height = img.height;
-                    ctx.drawImage(img, 0, 0);
-
-                    canvas.toBlob(function (blob) {
-                        const compressedUrl = URL.createObjectURL(blob);
-                        compressedImage.src = compressedUrl;
-                        downloadLink.href = compressedUrl;
-                        resultSection.style.display = 'block';
-
-                        // Hide spinner and enable button
-                        spinner.style.display = 'none';
-                        compressBtn.disabled = false;
-                    }, 'image/jpeg', parseFloat(compressionLevel.value));
-                };
-            };
-            reader.readAsDataURL(file);
-        });
-
-        // Dark Mode Toggle
-        const darkModeToggle = document.getElementById('dark-mode-toggle');
-        darkModeToggle.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-        });
-    </script>
 </body>
 </html>
