--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         }
     </style>
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_AD_SENSE_ID" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-8886337732040385/1180531361" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -249,8 +249,8 @@
         <div class="ad-unit">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-YOUR_AD_SENSE_ID"
-                 data-ad-slot="YOUR_AD_UNIT_ID"
+                 data-ad-client="ca-app-pub-8886337732040385/1477647554"
+                 data-ad-slot="ca-app-pub-8886337732040385/1477647554"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
@@ -260,7 +260,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Image Compression Tool. All rights reserved.</p>
+        <p>&copy; 2025 Image Compression Tool. All rights reserved.</p>
     </footer>
 
     <script>
